# clear_stm32_project_FreeRTOS

./: .gitignore  CMakeLists.txt  README.md
cmake/: functions.cmake  toolchain-arm-none-eabi.cmake
include/: FreeRTOSConfig.h  main.h
src/: main.c  stm32f4xx_it.c
